--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Platform Ticket</title>
+  <title>CSS Card Flip</title>
   <link rel="stylesheet" href="scss/main.scss">
 </head>
 
 <body>
-  <h1>Parcel Starter</h1>
+  <div class="card">
+    <div class="card_content">
+
+      <div class="card_front">
+        <h3 class="card_title">Yorkshire Terriers</h3>
+      </div>
+
+      <div class="card_back">
+        <p class="card_body"><span class="bold">Origin:</span> England</p>
+        <p class="card_body"><span class="bold">Colors:</span> Black, Tan, Grey, Gold</p>
+        <p class="card_body"><span class="bold">Lifespan:</span> 13 - 16 years</p>
+        <p class="card_body"><span class="bold">Height:</span> 8" - 9"</p>
+        <p class="card_body"><span class="bold">Weight:</span> 4 - 7 lbs</p>
+        <p class="card_body"><span class="bold">Hypoallergenic:</span> yes</p>
+        <p class="card_body"><span class="bold">Temperment:</span> intellegent, bold, confident</p>
+        <p class="card_body">They are the smalled dog breed of the Terrier family.</p>
+      </div>
+
+    </div>
+  </div>
 </body>
 
 </html>
